--- a/public/workspace.ipynb
+++ b/public/workspace.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,31 +30,76 @@
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "number of LI independent:  84\n",
+      "moment matrix shape:  (37, 37)\n"
+     ]
+    }
+   ],
    "source": [
-    "# Import basis\n",
-    "basis_filename = \"data_basis/3-dim-2-num_obs-3-len_seq-3-num_out.npy\"\n",
-    "X_basis = np.load(basis_filename)"
+    "basis_filename = \"data_basis/2-dim-3-num_obs-2-len_seq-2-num_out.npy\"\n",
+    "basis_prop(basis_filename)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "number of LI independent:  35\n",
+      "moment matrix shape:  (10, 10)\n"
+     ]
+    }
+   ],
    "source": [
-    "len(X_basis)"
+    "basis_filename = \"data_basis/2-dim-3-num_obs-2-len_seq-2-num_out-1-level.npy\"\n",
+    "basis_prop(basis_filename)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "number of LI independent:  84\n",
+      "moment matrix shape:  (37, 37)\n"
+     ]
+    }
+   ],
    "source": [
-    "# Import basis\n",
-    "basis_filename = \"data_basis/3-dim-2-num_obs-3-len_seq-3-num_out.npy\"\n",
-    "X_basis = np.load(basis_filename)"
+    "basis_filename = \"data_basis/2-dim-3-num_obs-2-len_seq-2-num_out-2-level.npy\"\n",
+    "basis_prop(basis_filename)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "number of LI independent:  84\n",
+      "moment matrix shape:  (28, 28)\n"
+     ]
+    }
+   ],
+   "source": [
+    "basis_filename = \"data_basis/2-dim-3-num_obs-3-len_seq-2-num_out.npy\"\n",
+    "basis_prop(basis_filename)"
    ]
   },
   {
@@ -81,7 +126,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.6.7"
   }
  },
  "nbformat": 4,
