--- a/script/Scenario_Classification.ipynb
+++ b/script/Scenario_Classification.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,18 +25,7 @@
     {
      "data": {
       "text/plain": [
-       "{'232': {'LI num': [13, 13, 13, 13], 'dimension': [2, 3, 4, 5]},\n",
-       " '432': {'LI num': [382, 1457, 1457, 1457], 'dimension': [2, 3, 4, 5]},\n",
-       " '332': {'LI num': [84, 190, 190, 190], 'dimension': [2, 3, 4, 5]},\n",
-       " '322': {'LI num': [35, 46, 46, 46], 'dimension': [2, 3, 4, 5]},\n",
-       " '222': {'LI num': [9, 9, 9, 9], 'dimension': [2, 3, 4, 5]},\n",
-       " '233': {'LI num': [206, 253, 253], 'dimension': [3, 4, 5]},\n",
-       " '323': {'LI num': [511, 511, 511], 'dimension': [3, 4, 5]},\n",
-       " '423': {'LI num': [2073, 2073, 2073], 'dimension': [3, 4, 5]},\n",
-       " '422': {'LI num': [102, 161, 161, 161], 'dimension': [2, 3, 4, 5]},\n",
-       " '622': {'LI num': [492, 937, 937, 937], 'dimension': [2, 3, 4, 5]},\n",
-       " '522': {'LI num': [241, 426, 426, 426], 'dimension': [2, 3, 4, 5]},\n",
-       " '223': {'LI num': [61, 61, 61], 'dimension': [3, 4, 5]}}"
+       "{}"
       ]
      },
      "execution_count": 3,
@@ -45,7 +34,7 @@
     }
    ],
    "source": [
-    "path = \"data_basis/\"\n",
+    "path = \"data/data_basis/\"\n",
     "data = parse_LI(path)\n",
     "\n",
     "data"
@@ -274,7 +263,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
