--- a/script/Inequality_in_322_scenario.ipynb
+++ b/script/Inequality_in_322_scenario.ipynb
@@ -2,89 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
-    "import cvxpy as cp\n",
-    "from basis_generator import rand_moment\n",
+    "from basis_generator import sel_seq, proj_mul\n",
+    "from random_witness_generator import NPA_bound\n",
     "import json"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def single_behavior_visibility(X, X_basis):\n",
-    "    \n",
-    "    eta = cp.Variable((1, 1))\n",
-    "    alpha = cp.Variable((len(X_basis), 1))\n",
-    "    beta = cp.Variable((len(X_basis), 1))\n",
-    "    M = cp.Variable(X_basis[0].shape)\n",
-    "    N = cp.Variable(X_basis[0].shape)\n",
-    "\n",
-    "    constraints = [N >> 0]\n",
-    "    constraints += [N == sum([beta[j]*X_basis[j] for j in range(len(X_basis))])]\n",
-    "    constraints += [N[0,0] == 1 - eta]\n",
-    "\n",
-    "    for i in range(1,len(X)):\n",
-    "        constraints += [\n",
-    "            eta*X[i,i] + N[i,i] == M[i,i]\n",
-    "        ]\n",
-    "\n",
-    "    constraints += [M >> 0]\n",
-    "    constraints += [M == sum([alpha[j]*X_basis[j] for j in range(len(X_basis))])]\n",
-    "    constraints += [M[0,0] == 1]\n",
-    "\n",
-    "    prob = cp.Problem(cp.Maximize(eta),\n",
-    "                      constraints)\n",
-    "    prob.solve(solver=cp.MOSEK, verbose=False)\n",
-    "    \n",
-    "    coef = []\n",
-    "    for __ in range(3,len(constraints)-3):\n",
-    "        coef.append(np.real(constraints[__].dual_value[0][0]))\n",
-    "    \n",
-    "    return eta.value[0][0], coef"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 42,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def NPA_bound(coef,X_basis):\n",
-    "    beta = cp.Variable((len(X_basis), 1))\n",
-    "    N = cp.Variable(X_basis[0].shape)\n",
-    "\n",
-    "    constraints = [N >> 0]\n",
-    "    constraints += [N == sum([beta[j]*X_basis[j] for j in range(len(X_basis))])]\n",
-    "    constraints += [N[0,0] == 1]\n",
-    "\n",
-    "    prob = cp.Problem(cp.Minimize(\n",
-    "            sum([N[j+1,j+1]*coef[j] for j in range(len(coef))])\n",
-    "            ),constraints)\n",
-    "    prob.solve(solver=cp.MOSEK, verbose=False)\n",
-    "    return prob.value"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 27,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Import basis\n",
-    "basis_filename = \"data_basis/2-dim-3-num_obs-2-len_seq-2-num_out.npy\"\n",
-    "X_basis = np.load(basis_filename)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -98,113 +28,107 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "X, rho, P = rand_moment(dimX, num_obs, len_seq, num_out, [len_seq], remove_last_out)\n",
-    "eta, coef = single_behavior_visibility(X, X_basis)"
+    "# Import basis\n",
+    "basis_filename = \"data/data_basis/2-dim-3-num_obs-2-len_seq-2-num_out-1-level.npy\"\n",
+    "X_basis = np.load(basis_filename)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.8417785173037825\n"
+      "(3, 3)\n",
+      "(3, 2, 3, 3)\n"
      ]
     }
    ],
    "source": [
-    "for __ in range(100):\n",
-    "    X_t, rho_t, P_t = rand_moment(dimX, num_obs, len_seq, num_out, [len_seq], remove_last_out)\n",
-    "    eta_t, coef_t = single_behavior_visibility(X_t, X_basis)\n",
-    "    if eta_t < eta:\n",
-    "        eta = eta_t\n",
-    "        coef = coef_t\n",
-    "        X = X_t\n",
-    "        rho = rho_t\n",
-    "        P = P_t\n",
-    "\n",
-    "print(eta)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 134,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "-0.6372680915558379\n"
-     ]
-    }
-   ],
-   "source": [
-    "Q = np.real(np.diag(X)[1:] @ coef)\n",
-    "print(Q)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 135,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "-0.47904664250464357\n"
-     ]
-    }
-   ],
-   "source": [
-    "C = NPA_bound(coef,X_basis)\n",
-    "print(C)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 136,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "data = {}\n",
-    "# data[\"Moment Matrix\"] = X\n",
-    "# data[\"Quantum State\"] = rho\n",
-    "# data[\"Measurements\"] = P\n",
-    "data[\"Inequality\"] = coef\n",
-    "data[\"Classical Bound\"] = C\n",
-    "data[\"Quantum Bound\"] = Q\n",
-    "\n",
-    "data[\"num of observables\"] = num_obs\n",
-    "data[\"maximum length of sequences\"] = len_seq\n",
-    "data[\"num of outcomes\"] = num_out\n",
-    "data[\"dimension behavior\"] = dimX\n",
-    "data[\"dimension base\"] = dim_base\n",
-    "\n",
     "NAME = '{}-num_obs-{}-len_seq-{}-out_max-{}-dim_behavior-{}-dim_base'.format(num_obs, len_seq, num_out, dimX, dim_base)\n",
     "\n",
-    "with open(\"dimension_witness/\" + NAME + '.json', 'w') as fp:\n",
-    "    json.dump(data, fp, indent=2)\n",
-    "    \n",
-    "np.save(\"dimension_witness/\" + NAME + \"-moment_matrix\", X)\n",
-    "np.save(\"dimension_witness/\" + NAME + \"-state\", rho)\n",
-    "np.save(\"dimension_witness/\" + NAME + \"-measurements\", P)"
+    "#### Loading and testing state\n",
+    "rho = np.load(\"data/dimension_witness/\" + NAME + \"-state.npy\")\n",
+    "print(rho.shape)\n",
+    "\n",
+    "#### Loading measurements\n",
+    "P = np.load(\"data/dimension_witness/\" + NAME + \"-measurements.npy\")\n",
+    "print(P.shape)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "sequences = sel_seq(num_obs, len_seq, num_out, remove_last_out=True)\n",
+    "\n",
+    "X = np.eye(len(sequences)+1, dtype=complex)\n",
+    "for i, seq_row in enumerate(sequences):\n",
+    "    Pi = proj_mul([P[k] for k in seq_row[1]], seq_row[0])\n",
+    "    for j, seq_col in enumerate(sequences):\n",
+    "        if i==j:\n",
+    "            Pj= proj_mul([P[k] for k in seq_col[1]], seq_col[0])\n",
+    "            X[i+1,j+1] = np.trace(Pi @ np.conjugate(Pj.T) @ rho)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open(\"data/dimension_witness/\" + NAME + '.json') as json_file:\n",
+    "     ineq = json.load(json_file)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "-0.5958249944887094"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.real(np.diag(X)[1:] @ ineq[\"Inequality\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "-0.4831671398265027"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "NPA_bound(ineq[\"Inequality\"],X_basis)"
+   ]
   }
  ],
  "metadata": {
@@ -223,7 +147,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.6.7"
   }
  },
  "nbformat": 4,
